<resources>
    <string name="app_name">ProgrammerCalculator</string>
    <string name="decimal">Decimal</string>
    <string name="hex">Hexadecimal</string>
    <string name="octal">Octal</string>
    <string name="binary">Binary</string>
    <string name="clear">Clear</string>
    <string name="icon">icon</string>
    <string name="programmer_calculator">Programmer Calculator</string>
</resources>