<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="25dp"
    android:paddingEnd="25dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/decTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/decimal"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/decEt"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:digits="0123456789"
        android:hint="@string/decimal"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/decTv" />

    <TextView
        android:id="@+id/hexTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hex"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/decEt" />

    <EditText
        android:id="@+id/hexEt"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:digits="0123456789abcdefABCDEF"
        android:hint="@string/hex"
        android:importantForAutofill="no"
        android:inputType="textCapCharacters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hexTv" />

    <TextView
        android:id="@+id/octTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/octal"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hexEt" />

    <EditText
        android:id="@+id/octEt"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:digits="01234567"
        android:hint="@string/octal"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/octTv" />

    <TextView
        android:id="@+id/binTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/binary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/octEt" />

    <EditText
        android:id="@+id/binEt"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:digits="01"
        android:hint="@string/binary"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:maxLength="64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/binTv" />

    <Button
        android:id="@+id/clearBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/binEt" />


</androidx.constraintlayout.widget.ConstraintLayout>
